syntax = "proto3";

option go_package = "/rpc_user";

import "base.proto";

service UserServiceImpl {
    rpc Login(UserLoginRequest) returns (UserLoginResponse);
    rpc Register(UserRegisterRequest) returns (UserRegisterResponse);
    rpc GetUser(UserInfoRequest) returns (UserResponse);
    rpc GetUserList(GetUserListRequest) returns (GetUserListResponse);
}

//Request message------------------->
message UserRegisterRequest {
    string username = 1;
    string password = 2;
}

message UserLoginRequest {
    string username = 1;
    string password = 2;
}

message UserInfoRequest {
    int64 user_id = 1;
    int64 viewer_id = 2;
}

message GetUserListRequest {
    repeated int64 user_id_list = 1;
}

//Response message------------------->
message UserLoginResponse {
    Response base_resp = 1;
    int64 user_id = 2;
    string token = 3;
}

message UserRegisterResponse {
    Response base_resp = 1;
    int64 user_id = 2;
    string token = 3;
}

message UserResponse {
    Response base_resp = 1;
    User user = 2;
}

message GetUserListResponse {
    repeated User user_list = 1;
}